package work3.composite;

/**
 * Перелік арифметичних операцій
 */
public enum Operator {
    ADD, SUB, MUL, DIV
}
